--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -13,3 +13,9 @@
 body{
     font-family: 'Cutive Mono', monospace;
 }
+
+a {
+    color: black;
+    text-decoration: none;
+    font-size: 20px;
+}
