--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,26 +1,46 @@
 .container {
-    padding: 1em 20em 0 20em;
+    padding: 80px 120px;
 }
 
+/*
 #header { 
     position:absolute;
-}
+}*/
 
+/*
 .main {
     position: absolute;
 }
+*/
 
 body{
     font-family: 'Cutive Mono', monospace;
 }
 
-a {
+/* links */
+
+
+ul#nav{
+    list-style: none;
+    padding:0;
+    margin: 0 0 10px 0;
+
     color: black;
     text-decoration: none;
     font-size: 20px;
 }
 
-/* for vertical line in header between github, email, about links */
+a {
+    color: black;
+    text-decoration: none !important;
+    font-size: 20px;
+}
+
+a:hover {
+    border-bottom: 1px solid;
+}
+
+/* for vertical line between links */
 .verticalLine {
     
     border-left:    solid #000000;
@@ -29,14 +49,12 @@ a {
 
 }
 
-/* Bootstrap stuff */
-
-
+/* Bootstrap & image stuff */
 .picture{
     border: 10px solid transparent;
     margin-bottom: 25px;
-    width: 100%;
-    height: 100%;
+    width: 60%;
+    height: 59%;
     opacity: 0.7;
 }
 
